--- a/index.html
+++ b/index.html
@@ -10,7 +10,89 @@
 </head>
 
 <body>
-  <h1>Project starter</h1>
+  <h1>Frequently Asked Questions</h1>
+  <div class="faq-container">
+    <div class="faq active">
+      <h3 class="faq__title">
+        Why shouldn't we trust atoms?
+      </h3>
+
+      <p class="faq__text">
+        They make up everything
+      </p>
+
+      <button>
+        <i class="fa fa-chevron-down"></i>
+        <i class="fa fa-times"></i>
+      </button>
+
+    </div>
+
+    <div class="faq active">
+      <h3 class="faq__title">
+        what do you call somemone with no body an no nose?
+      </h3>
+
+      <p class="faq__text">
+        who knows
+      </p>
+
+      <button>
+        <i class="fa fa-chevron-down"></i>
+        <i class="fa fa-times"></i>
+      </button>
+
+    </div>
+
+    <div class="faq active">
+      <h3 class="faq__title">
+        what's the project-oriented way to become wealthy?
+      </h3>
+
+      <p class="faq__text">
+        They make up everything
+      </p>
+
+      <button>
+        <i class="fa fa-chevron-down"></i>
+        <i class="fa fa-times"></i>
+      </button>
+
+    </div>
+
+    <div class="faq active">
+      <h3 class="faq__title">
+        How many tickles does it takes to tickle an octopus?
+      </h3>
+
+      <p class="faq__text">
+        They make up everything
+      </p>
+
+      <button>
+        <i class="fa fa-chevron-down"></i>
+        <i class="fa fa-times"></i>
+      </button>
+
+    </div>
+
+
+    <div class="faq active">
+      <h3 class="faq__title">
+        What is 1 + 1
+      </h3>
+
+      <p class="faq__text">
+        Depends on who on asking.
+      </p>
+
+      <button>
+        <i class="fa fa-chevron-down"></i>
+        <i class="fa fa-times"></i>
+      </button>
+
+    </div>
+  </div>
 
 
   <script src="script.js"></script>
