--- a/index.html
+++ b/index.html
@@ -16,81 +16,66 @@
       <h3 class="faq__title">
         Why shouldn't we trust atoms?
       </h3>
-
       <p class="faq__text">
         They make up everything
       </p>
-
-      <button>
+      <button class="faq__toggle">
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
-
     </div>
 
-    <div class="faq active">
+    <div class="faq ">
       <h3 class="faq__title">
         what do you call somemone with no body an no nose?
       </h3>
-
       <p class="faq__text">
         who knows
       </p>
-
-      <button>
+      <button class="faq__toggle">
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
-
     </div>
 
-    <div class="faq active">
+    <div class="faq">
       <h3 class="faq__title">
         what's the project-oriented way to become wealthy?
       </h3>
-
       <p class="faq__text">
         They make up everything
       </p>
-
-      <button>
+      <button class="faq__toggle">
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
-
     </div>
 
-    <div class="faq active">
+    <div class="faq">
       <h3 class="faq__title">
         How many tickles does it takes to tickle an octopus?
       </h3>
-
       <p class="faq__text">
         They make up everything
       </p>
-
-      <button>
+      <button class="faq__toggle">
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
-
     </div>
 
 
-    <div class="faq active">
+    <div class="faq">
       <h3 class="faq__title">
         What is 1 + 1
       </h3>
-
       <p class="faq__text">
         Depends on who on asking.
       </p>
-
       <button>
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
-
     </div>
   </div>
 
