--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p class="faq__text">
         Depends on who on asking.
       </p>
-      <button>
+      <button class="faq__toggle">
         <i class="fa fa-chevron-down"></i>
         <i class="fa fa-times"></i>
       </button>
